# Algorithms_and_Data_Structures_Labs

./: .gitignore  README.md
1_sem/CourseWork/: function.c
2_sem/CourseWork/generate/: generate.c  struct.h
2_sem/Lab_1/: lab1_progin_c_2sem.c
2_sem/Lab_2/: lab2_progin_c_2sem.c
2_sem/Lab_3/: generate.c
3_sem/Lab_1/: Pred_RElise.pro  Pred_RElise.pro.user.1702244  mainwindow.ui
3_sem/Lab_2/: Lab_2_And.pro  mainwindow.ui
3_sem/Lab_3/: Lab_3_beta.pro.user.1702244  mainwindow.cpp  mainwindow.ui
3_sem/Lab_4/: Lab_4_gui_beta.pro  bintree.cpp  bintree.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
4_sem/Java Practice/: README.md
4_sem/Lab_1/: helpbrowser.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newviewer.pro  resources.qrc  solver.cpp
4_sem/Lab_2/: main.cpp  mainwindow.cpp  mainwindow.ui
4_sem/Lab_2-bestGraphDrawEver/: ElasticNodes.pro  biconnected.cpp  biconnected.h  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h
4_sem/Lab_3/: README.md  lab_2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stringtograph.h
4_sem/Lab_3_beta/: main.cpp  mainwindow.cpp  mainwindow.ui
4_sem/Lab_4/: chose.ui  main.cpp  mainwindow.cpp
4_sem/Lab_5/: README.md  menu.sh
4_sem/Lab_6/: README.md
4_sem/PiAA/Lab_5/: .gitignore  CMakeLists.txt  run.sh
4_sem/PiAA/Lab_5/doc/: aboutscripts.md  results.md
4_sem/PiAA/Lab_5/source/: functionsString.cpp  stepic_1.cpp
4_sem/PiAA/Lab_6/: CMakeLists.txt  README.md  menu.sh  run.sh
4_sem/PiAA/Lab_6/doc/: howtoinstall.md  report.docx
4_sem/PiAA/Lab_6/source/: functionsBor.cpp  task_1.cpp
Lab_1/: main.cpp  mainwindow.cpp  mainwindow.h
Lab_2/: list.cpp  list.h  main.cpp  mainwindow.cpp  mainwindow.h
Lab_3/: Lab_3_beta.pro  Lab_3_beta.pro.user.feda854  main.cpp  mainwindow.h
Lab_3/Report/: AaDS_3_lab.docx
Lab_4/Report/: AaDS_4_lab.docx
(+197 files in other folders)
